Remove unused image files and update HTML structure with vitamin layout and info cards

--- a/task1/index.html
+++ b/task1/index.html
@@ -51,5 +51,61 @@
   </header>
 </div>
 
+<div class="vitamin-layout">
+        <div class="vitamin-layout__container">
+            <!-- Central lemon image -->
+            <div class="vitamin-layout__center">
+                <img src="./Portals/0/rich-content/brand/EAN/img/lemon.png" alt="Vitamin C with lemon" class="vitamin-layout__lemon-image">
+            </div>
+
+            <!-- Top right section - Witamina C -->
+            <div class="info-card info-card--top-right">
+                <div class="info-card__bracket">
+                    <img src="./Portals/0/rich-content/brand/EAN/img/lines_top_right.png" alt="" class="info-card__bracket-image">
+                </div>
+                <div class="info-card__content">
+                    <h2 class="info-card__title">WITAMINA C</h2>
+                    <p class="info-card__description">
+                        <strong>Jedna z najstabilniejszych form witaminy C [3-O etylowy kwas askorbinowy]</strong> zapewnia skuteczność produktu przez cały okres stosowania i sprawia, że serum nie zmienia koloru. Oprócz właściwości redukujących przebarwienia ma także działanie przeciwzmarszczkowe.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Bottom left section - Niacynamid -->
+            <div class="info-card info-card--bottom-left">
+                <div class="info-card__bracket">
+                    <img src="./Portals/0/rich-content/brand/EAN/img/lines_bottom_left.png" alt="" class="info-card__bracket-image">
+                </div>
+                <div class="info-card__content">
+                    <h2 class="info-card__title">NIACYNAMID<br>KWAS<br>SALICYLOWY</h2>
+                    <p class="info-card__description">
+                        Skuteczne składniki aktywne, które wygładzają skórę, ujednolicają jej koloryt i wspomagają rozświetlające działanie serum.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Bottom right section - Ekstrakt -->
+            <div class="info-card info-card--bottom-right">
+                <div class="info-card__bracket">
+                    <img src="./Portals/0/rich-content/brand/EAN/img/lines_bottom_right.png" alt="" class="info-card__bracket-image">
+                </div>
+                <div class="info-card__content">
+                    <h2 class="info-card__title">EKSTRAKT<br>Z CYTRYNY</h2>
+                    <p class="info-card__description">
+                        <strong>Ekstrakt z cytryny,</strong> superowocu znanego ze swoich właściwości rozświetlających. Bogaty w antyoksydanty pomaga redukować widoczność przebarwień.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+<section>
+    fd Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae ab culpa minus assumenda voluptate. Quisquam provident ipsa voluptates assumenda repudiandae qui ad accusamus error in, iure ratione. Ratione, veritatis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel suscipit quibusdam cum sequi! Similique officia ut aut voluptatum, incidunt sit? Cumque a reprehenderit, provident labore veritatis sunt fugiat culpa tempora.
+    Cupiditate veritatis ullam exercitationem. Magnam commodi porro rem corrupti laboriosam ab odit eveniet repudiandae animi molestias error eum minima, perspiciatis hic unde nam consequuntur quod. Consequuntur architecto numquam excepturi accusantium!
+    Expedita illum, ullam tempore voluptatum, dolorem porro corporis est magnam ipsum consectetur amet sed odit laboriosam. Non, distinctio nobis ab voluptate odio aut, aliquid, pariatur dolores accusantium earum porro. Ullam?
+    Maiores labore est magni illo provident repudiandae quam et eum suscipit ea? Ullam doloribus, earum harum mollitia vero iusto quis voluptatibus saepe provident, numquam ut facere ea perspiciatis nihil fugiat.
+    Praesentium explicabo molestiae nemo reprehenderit temporibus asperiores neque accusamus suscipit eius quas? Explicabo qui in error distinctio, et quia id, sit commodi iste doloremque nemo, velit sequi. Doloremque, adipisci perferendis?
+</section>
+
 </body>
 </html>
