Refactor layout for improved responsiveness and remove placeholder text

--- a/task1/index.html
+++ b/task1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Portals/0/rich-content/brand/EAN/css/style.css">
 </head>
 <body>
-    <div class="garnier__header__container">
+    <div class="garnier__header__container" id="rich-content-container">
   <!-- Header Section -->
   <header class="garnier__header__section">
     
@@ -98,14 +98,7 @@
             </div>
         </div>
     </div>
-<section>
-    fd Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae ab culpa minus assumenda voluptate. Quisquam provident ipsa voluptates assumenda repudiandae qui ad accusamus error in, iure ratione. Ratione, veritatis.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel suscipit quibusdam cum sequi! Similique officia ut aut voluptatum, incidunt sit? Cumque a reprehenderit, provident labore veritatis sunt fugiat culpa tempora.
-    Cupiditate veritatis ullam exercitationem. Magnam commodi porro rem corrupti laboriosam ab odit eveniet repudiandae animi molestias error eum minima, perspiciatis hic unde nam consequuntur quod. Consequuntur architecto numquam excepturi accusantium!
-    Expedita illum, ullam tempore voluptatum, dolorem porro corporis est magnam ipsum consectetur amet sed odit laboriosam. Non, distinctio nobis ab voluptate odio aut, aliquid, pariatur dolores accusantium earum porro. Ullam?
-    Maiores labore est magni illo provident repudiandae quam et eum suscipit ea? Ullam doloribus, earum harum mollitia vero iusto quis voluptatibus saepe provident, numquam ut facere ea perspiciatis nihil fugiat.
-    Praesentium explicabo molestiae nemo reprehenderit temporibus asperiores neque accusamus suscipit eius quas? Explicabo qui in error distinctio, et quia id, sit commodi iste doloremque nemo, velit sequi. Doloremque, adipisci perferendis?
-</section>
+
 
 </body>
 </html>
